--- a/src/app/examples/sign-in/sign-in.component.html
+++ b/src/app/examples/sign-in/sign-in.component.html
@@ -1,11 +1,17 @@
 
 <div  class="regform border border-primary">
     <div class="container">
-      <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-horizontal" style=" margin-top: 150px;">
+      <form [formGroup]="form" #regisform="ngForm" (ngSubmit)="registerUser()" class="form-horizontal" style=" margin-top: 150px;">
         <div>
-          
-          <h3 class="title" style="align-content: center; font-weight: bold;">Registeration Form</h3>
+          <div class="float-right">
+            <a (click)="gotologin()" class="btn btn-link btn-danger">Existing User? Click here to Login</a>
+        </div>
+        <br>
+          <h2 class="title" style="align-content: center; font-weight: bold;">REGISTRATION FORM</h2>
         </div>  
+        
+      <br>
+      <br>
        
         
           
@@ -13,21 +19,22 @@
               <label for="firstName" class="control-label">Firstname:</label>
               <span class="text-danger"*ngIf="form.get('firstName').hasError('required')">*</span>
               <div class="col=md-10 regInput" >
-              <input type="text" class="form-control" id="firstName" placeholder="First name" formControlName="firstName" >
+              <input type="text" class="form-control" id="firstName" [(ngModel)]="user.firstname" placeholder="First name" formControlName="firstName" >
               </div>
             </div>
+            
             <div class="form-group" >
               <label for="lastName" class="control-label">Last name:</label>
               <span class="text-danger"*ngIf="form.get('lastName').hasError('required')">*</span>
                <div class="col=md-10 regInput" >
-              <input type="text" class="form-control" id="lastName" placeholder="Last name" formControlName="lastName" required>      
+              <input type="text" class="form-control" id="lastName" [(ngModel)]="user.lastname" placeholder="Last name" formControlName="lastName" required>      
             </div>   
             </div>
          
            <div class="form-group">
               <label class="control-label" >Gender <span class="text-danger"*ngIf="form.get('gender').hasError('required')">*</span>:</label>
                <div class="col=md-10 regInput" >
-              <select class="form-control" id="gender" formControlName="gender" aria-placeholder="select" required >
+              <select class="form-control" id="gender" [(ngModel)]="user.gender" formControlName="gender" aria-placeholder="select" required >
             <option value="" selected>Select</option>
             <option value='Male'>Male</option>
             <option value='Female'>Female</option>
@@ -40,7 +47,7 @@
               <label class="control-label">Date of birth:</label>
               <span class="text-danger"*ngIf="form.get('dateOfBirth').hasError('required')">*</span>
                <div class="col=md-10 regInput" >
-                <input class="form-control" type="date"  id="example-date-input" formControlName="dateOfBirth" required>
+                <input class="form-control" type="date" [(ngModel)]="user.dob" id="example-date-input" formControlName="dateOfBirth" required>
               </div>
             </div>
               
@@ -48,14 +55,14 @@
             <label for="inputAddress" class="control-label">Address:</label>
             <span class="text-danger"*ngIf="form.get('inputAddress').hasError('required')">*</span>
              <div class="col=md-10 regInput" >
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" formControlName="inputAddress" required>
+            <input type="text" class="form-control" id="inputAddress" [(ngModel)]="user.address" placeholder="1234 Main St" formControlName="inputAddress" required>
           </div>
         </div>
           <div class="form-group">
             <label for="" class="control-label">Phone:</label>
             <span class="text-danger"*ngIf="form.get('phone').hasError('required') ">*</span>
              <div class="col=md-10 regInput" >
-            <input type="text" class="form-control" id="phone" placeholder="Enter your phone number" formControlName="phone"></div>
+            <input type="text" class="form-control" id="phone" [(ngModel)]="user.phone" placeholder="Enter your phone number" formControlName="phone"></div>
             <div *ngIf="form.get('phone').hasError('pattern')">  
               <span style="color: red;">Enter valid phone number</span>  
              </div>  
@@ -66,7 +73,7 @@
                   <label for="" class="control-label">Email:</label>
                   <span class="text-danger"*ngIf="form.get('email').hasError('required') ">*</span>
                    <div class="col=md-10 regInput" >
-                  <input type="text" class="form-control" id="email" placeholder="Eg:xyz@abc.com" formControlName="email"></div>
+                  <input type="text" class="form-control" [(ngModel)]="user.email" id="email" placeholder="Eg:xyz@abc.com" formControlName="email"></div>
                   <div *ngIf="form.get('email').hasError('pattern')">  
                     <span style="color: red;">Enter valid mail id</span>  
                    </div>  
@@ -74,13 +81,12 @@
                 </div>
 
 
-               
-  
+          
           <div class="form-group">
             <label for="" class="control-label">Aadhar UID number:</label>
             <span class="text-danger"*ngIf="form.get('aadharCard').hasError('required')">*</span>
              <div class="col=md-10 regInput" >
-            <input type="text" class="form-control" id="aadharCard" placeholder="Enter your 12 digit aadhar number" formControlName="aadharCard" required> 
+            <input type="text" class="form-control" [(ngModel)]="user.aadhar" id="aadharCard" placeholder="Enter your 12 digit aadhar number" formControlName="aadharCard" required> 
             </div>
             <div *ngIf="form.get('aadharCard').hasError('pattern')">  
               <span style="color: red;">Enter valid 12 digit Aadhar number</span>  
@@ -90,7 +96,7 @@
             <label for="" class="control-label">Pan card number:</label>
             <span class="text-danger"*ngIf="form.get('panCard').hasError('required')">*</span>
              <div class="col=md-10 regInput" >
-            <input type="text" class="form-control" id="panCard" placeholder="Eg:ALWPG5809L" formControlName="panCard" required></div>
+            <input type="text" class="form-control" [(ngModel)]="user.pan" id="panCard" placeholder="Eg:ALWPG5809L" formControlName="panCard" required></div>
             <div *ngIf="form.get('panCard').hasError('pattern')">  
               <span style="color: red;">Enter valid Pan card number</span>  
              </div>  
@@ -99,7 +105,7 @@
     <div class="form-group">
               <label class="control-label" >Type of account <span class="text-danger"*ngIf="form.get('accountType').hasError('required')">*</span>:</label>
                <div class="col=md-10 regInput" >
-              <select class="form-control" id="accountType" formControlName="accountType" aria-placeholder="select" required >
+              <select class="form-control" [(ngModel)]="user.acctype" id="accountType" formControlName="accountType" aria-placeholder="select" required >
             <option value="" selected>Select</option>
             <option value='Current account'>Current account</option>
             <option value='Savings account'>Savings account</option>
@@ -113,7 +119,7 @@
             <span class="text-danger"*ngIf="form.get('password').hasError('required')">*</span>
              <div class="col=md-10 regInput " >
             
-             <input type="password" class="form-control" id="password" placeholder="Eg:Enter your password" formControlName="password" required></div> 
+             <input type="password" class="form-control" [(ngModel)]="user.password" id="password" placeholder="Eg:Enter your password" formControlName="password" required></div> 
      
           </div>
           
@@ -127,8 +133,8 @@
               </label>
             </div>
           </div>
-          <button type="submit" [disabled]="!form.valid" >Create account</button>
-     
+          
+          <button type="submit" [disabled]="!form.valid" class="btn btn-info btn-lg">Create account</button>
           
       </form>
       </div>
