--- a/src/app/examples/personal-loan/personal-loan.component.css
+++ b/src/app/examples/personal-loan/personal-loan.component.css
@@ -32,11 +32,12 @@
     h1{
     
       text-align: center;
-      margin-top: -55px;
+      margin-top: 20px;
       padding-bottom: 50px;
       margin-left: 131px;
       font-family: ui-monospace;
       color: white;
+      margin-right: 72px;
       
     }
     
@@ -56,6 +57,8 @@
           background:#8aa9b8c7;
           border-radius: 8px;
           opacity: 0.9;
+          margin-top: 120px;
+        
         }
    
     label
