--- a/src/app/examples/profile/profile.component.html
+++ b/src/app/examples/profile/profile.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg static-top navbar-dark bg-dark">
-    <img src="assets/img/bankimm.jpeg" class="img-fluid" >
+    <img src="assets/img/foot.png" class="img-fluid" >
     <div class="navbar-collapse">
           <ul class="navbar-nav ml-auto">
          <li class="nav-item" >
